[INJIVER-1415] - add test for revocation constant
Signed-off-by: sarupmoni <93664377+sarupmoni@users.noreply.github.com>